IE: Make option to dismiss GCF installation more prominent. (#137)

--- a/gobotany/simplekey/templates/simplekey/_chrome_frame.html
+++ b/gobotany/simplekey/templates/simplekey/_chrome_frame.html
@@ -14,11 +14,11 @@
             To use the site with Internet Explorer, you'll need the
             <strong>Google Chrome Frame plug-in</strong>: a quick-and-easy
             one-time install.</p>
-            <p>After installing it below, please re-start Internet
+            <p>After installing Google Chrome Frame, please re-start Internet
             Explorer.</p>
             <p class="dismiss"><a 
-                href="javascript:dismiss_gcf_install();">Skip for now and
-                view the site without Chrome Frame</a></p>
+                href="javascript:dismiss_gcf_install();"
+                title="Skip installing this time and use the site without Google Chrome Frame">Skip install for now</a></p>
             <img src="/static/images/branding/logo-toplevel.png" alt="">
         </div>
         <script>
