Fix Plant of the Day image cropping on the home page.
Correct the image to be the square large thumbnail, which crops as intended. Center
the image in the left third of the box under the first 'column' above, and add
some vertical padding to give a proportional border and align with heading. Left-align
text to the dotted-line divider above it. Left align the Learn More button to match
other button alignments on the page. (#138)

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -80,7 +80,7 @@
                     {% if plant_of_the_day %}
                         <a href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/"
                             title="Learn more about {{ plant_of_the_day.scientific_name }}">
-                          <img src="{{ plant_of_the_day_image.image_medium }}"
+                          <img src="{{ plant_of_the_day_image.thumb_large }}"
                                alt="{{ plant_of_the_day.scientific_name }}">
                         </a>
                         <div class="details">
