Remove use of the inline "args" module in our templates.
To avoid having to include the html templates in our build configuration
becaue they define their own inline modules, modify the modules which
require an args object to return a function rather than executing when
parsed.  Then we can simply create a plain old Javascript object in the
html template and pass it into that function as a regular parameter.

--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -14,10 +14,12 @@ Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }
 {% endblock %}
 
 {% block js_require %}
-    define('args', [], {
+    var args = {
         family_slug: '{{ family.slug }}'
+    };
+    require(['simplekey/family'], function(family_page_init) {
+        family_page_init(args);
     });
-    require(['simplekey/family']);
 {% endblock %}
 
 {% block body_attributes %}id="family" class="claro app family"{% endblock %}
