Fix some missed references to the sidebar module.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -49,7 +49,7 @@
         <script src="/static/scripts/dojo_config.js"></script>
         {# In order to get better error messages during debugging, #}
         {# change 'dojo.js' to 'dojo.js.uncompressed.js' below.    #}
-        <script src="/static/scripts/lib/dojo/dojo.js"></script>
+        <script src="/static/scripts/lib/dojo/dojo.js.uncompressed.js"></script>
         <!-- <script src="/static/scripts/require.js"></script> -->
         {# This block is for adding any page-specific JS. #}
         <script>
