--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="advanced-id" class="claro app advanced-id"{% endblock %}
 
 {% block js_require %}
-    require(['sidebar']);
+    require(['util/sidebar']);
 {% endblock %}
 
 {% block body_content %}
