--- a/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="plantshare" class="claro app plantshare"{% endblock %}
 
 {% block js_require %}
-    require(['sidebar']);
+    require(['util/sidebar']);
 {% endblock %}
 
 {% block body_content %}
