--- a/gobotany/simplekey/templates/simplekey/teaching_tools.html
+++ b/gobotany/simplekey/templates/simplekey/teaching_tools.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="teaching-tools" class="claro app teaching-tools"{% endblock %}
 
 {% block js_require %}
-    require(['sidebar']);
+    require(['util/sidebar']);
 {% endblock %}
 
 {% block body_content %}
