--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="terms-of-use" class="claro app terms-of-use"{% endblock %}
 
 {% block js_require %}
-    require(['sidebar']);
+    require(['util/sidebar']);
 {% endblock %}
 
 {% block body_content %}
