Add Getting Started tutorial video.
Replace the old 'intro' YouTube ID with the one for the tutorial. Adjust the
Getting Started page so it brings up the video using HTML5 on mobile like
the others do. Adjust navigation and labeling around the about/help pages
as needed. (#143)

--- a/gobotany/simplekey/templates/simplekey/_help.html
+++ b/gobotany/simplekey/templates/simplekey/_help.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_new_base.html" %}
 
-{% block title %}{% block pagetitle %}{% endblock %}: Help{% endblock %}
+{% block title %}{% block pagetitle %}{% endblock %}{% endblock %}
 
 {% block js_require %}
     require(['simplekey/help']);
