--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}Glossary{% endblock %}
+{% block pagetitle %}Glossary: {{ this_letter|upper }}{% endblock %}
 
 {% block js_top %}
     <script>
