--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -67,22 +67,8 @@
                     <div class="clearit"></div>
                 </div>
                 <div id="sidebar">
-                    <div class="section">
-                        <h5><a href="{% url simplekey-help-about %}">About Go Botany</a></h5>
-                    </div>
-                    <div class="section">
-                        <h5><a href="{% url simplekey-help-glossary0 %}">Glossary</a></h5>
-                    </div>
-                    <div class="section">
-                        <h5><a href="{% url simplekey-help-video %}">Video Help Topics</a></h5>
-                    </div>
-                    <div class="section">
-                        <h5>
-                            Watch Video<br />
-                            (video coming soon)
-                        </h5>
-                        <p>How to use the Go Botany Plant Identifier</p>
-                    </div>
+                    {# Use SimpleKey until a page-specific design is created #}
+                    {% include "simplekey/_sidebar_items.html" %}
                 </div>
 
                 <div class="clearit"></div>
