--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -1,14 +1,11 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}Getting Started{% endblock %}
+{% block pagetitle %}Getting Started with the Simple Key{% endblock %}
 
 {% block body_attributes %}id="getting-started" class="claro app getting-started"{% endblock %}
 
 {% block main_content %}			
-    <a class="onward-btn"
-        href="{% url simplekey %}">Onward to the Simple Key</a>
-
-    <h2>Getting Started</h2>
+    <h2>Getting Started with the Simple Key</h2>
 
     <div class="first question">
         <h4>What kinds of plants can I identify?</h4>
@@ -156,22 +153,21 @@
         class="onward-btn">Onward to the Simple Key</a>
 {% endblock %}
 
-{% comment %}
 {% block more_sidebar_content %}
-    <div class="section">
+    <div class="section separate">
         <h5>Watch Video:</h5>
         {% if getting_started_youtube_id %}
-            <a href="http://www.youtube.com/v/{{ getting_started_youtube_id }}&amp;autoplay=1"
-                rel="shadowbox;height=380;width=640;"><img
-                class="shadow" alt=""
-                title="How to use the Go Botany Simple Key"
-                src="http://img.youtube.com/vi/{{ getting_started_youtube_id }}/hq2.jpg"
-                style="width: 100%">
-            </a>
-            <p>How to use the Go Botany Simple Key</p>
+            <div class="video-topic">
+                <a class="video"
+                    href="http://www.youtube.com/embed/{{ getting_started_youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1">
+                    <img class="shadow"
+                        src="http://img.youtube.com/vi/{{ getting_started_youtube_id }}/0.jpg"
+                        alt="">
+                </a>
+            </div>
+            <p>How to use the Simple Key</p>
         {% else %}
             Admin: set the blurb 'getting_started_youtube_id'.
         {% endif %}
     </div>
 {% endblock %}
-{% endcomment %}
