Home page: Add a way to donate to the Society. (#146)

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -1,6 +1,6 @@
         <footer>
             <div class="container">
-                <div class="three-col">
+                <div class="publisher">
                     <p class="copyright">All images and text copyright 
                     &#169; {% include "simplekey/_copyright_years.html" %}
                     New England Wild Flower Society
@@ -11,7 +11,7 @@
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
 
-                <div class="three-col">
+                <div class="navigation">
                     <h6>Go Botany</h6>
                     <p><a href="{% url simplekey %}"
                           >Simple Key</a> |
@@ -24,7 +24,7 @@
                     <a href="{% url terms-of-use %}">Terms of Use</a></p>
                 </div>
 
-                <div class="three-col last">
+                <div class="support">
                     <img src="/static/images/layout/nsf-logo.png"
                         alt="National Science Foundation" class="nsf-logo">
                     <p>The Go Botany project is supported in part by the 
