--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -99,7 +99,17 @@
                     </div>
                     <div class="clearit"></div>
                 </div>
+
+                <div class="donate">
+                    <p>Please contribute to our mission to conserve and
+                    promote the region&#8217;s plants by making a
+                    donation to New England Wild Flower Society.
+                    <a href="http://www.newenglandwild.org/support/">Donate</a>
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
+
 {% endblock %}
