Gave a name to the otherwise anonymous function in simplekey/results.js, by having the module return an object with a named attribute instead of just a bare function; also, recovered a level of indentation, bringing the file back to the indentation level it was at previously.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -8,8 +8,8 @@
     var args = {
         pile_slug: '{{ pile.slug }}'
     };
-    require(['simplekey/results'], function(results_page_init) {
-        results_page_init(args);
+    require(['simplekey/results'], function(results) {
+        results.results_page_init(args);
     });
 {% endblock %}
 
