Switched back to development mode to refactor our JavaScript, and fixed an error ""Uncaught TypeError: Cannot read property 'className' of null" by having the ResultsHelper wait until the document is defined.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -46,35 +46,44 @@
 
         {% include "simplekey/_script_constants.html" %}
 
+        {% with production='' %}
+
+        {% if not production %}
+
         <!-- DEVELOPMENT FILES -->
-        <!--
         <script src="/static/scripts/dojo_config.js"></script>
         {# In order to get better error messages during debugging, #}
         {# change 'dojo.js' to 'dojo.js.uncompressed.js' below.    #}
         <script src="/static/scripts/lib/dojo/dojo.js.uncompressed.js"></script>
-        -->
+
+        {% else %}
 
         <!-- PRODUCTION / DEPLOYMENT FILES -->
         <script src="/static/scripts/dojo_config_deploy.js"></script>
         <script src="/static/build/deploy/dojo.js.uncompressed.js"></script>
+
+        {% endif %}
+
         {# This block is for adding any page-specific JS. #}
         <!-- <script src="/static/scripts/require.js"></script> -->
         <script>
-            /*
-            require.config({
-                baseUrl: "/static/scripts",
-                waitSeconds: 180
-            });
-            */
             function handleError(error) {
                 console.log("Dojo Error [" + error.id + "]: " + error.src);
             }
             require.on("error", handleError);
+
+            {% if production %}
             require(["/static/build/deploy/gobotany.application.js.uncompressed.js"], function(app) {
+            {% endif %}
+
             {% block js_require %}{% endblock %}
+
+            {% if production %}
             });
+            {% endif %}
         </script>
 
+        {% endwith %}
 		{# Google analytics tracking code #}
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
