Species page: italicize plant names in the Notes sidebar section.
Extend the code that italicizes plant names to deal with the few bits of
surrounding text that can appear in this field as well as the occasional
multiple sentences that can also appear there. (#149)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -316,7 +316,7 @@
                 {% if taxon.variety_notes %}
                 <div class="section">
                     <h5>Notes on Subspecies and Varieties:</h5>
-                    <p>{{ taxon.variety_notes|safe }}</p>
+                    <p>{{ taxon.variety_notes|italicize_plant|safe }}</p>
                 </div>
                 {% endif %}
                 
