Species page: present synonyms as a list instead of a paragraph.
Make it easier to skim the list of synonyms. (Italicization of names is
also more apparent.) (#149)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -292,11 +292,11 @@
                 {% if synonyms|length > 0 %}
                 <div class="section">
                     <h5>Synonyms:</h5>
-                    <p>
-                        {% for synonym in synonyms %}
-                            {{ synonym.full_name|italicize_plant|safe }}{% if not forloop.last %},{% endif %}
-                        {% endfor %}
-                    </p>
+                    <ul>
+                    {% for synonym in synonyms %}
+                        <li>{{ synonym.full_name|italicize_plant|safe }}</li>
+                    {% endfor %}
+                    </ul>
                 </div>
                 {% endif %}
                 {% endwith %}
