Start to make a page that can show lists of plants.
This is a first step toward being able to link from the Advanced Map to a list
of all plants for a group. It will be used on subgroups links there as well. (#142)

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -28,6 +28,10 @@
                             {% endif %}
                         {% endfor %}
                     </div>
+                    <p class="list">
+                        <a href="/list/"
+                            >Species list</a>
+                    </p>
                     {% if group.youtube_id %}
                     <p class="video">
                         <a class="video"
