Enhance the appearance of the species list page table. (#142)

--- a/gobotany/simplekey/templates/simplekey/plant_list.html
+++ b/gobotany/simplekey/templates/simplekey/plant_list.html
@@ -20,7 +20,7 @@
                             <th>Common Name</th>
                             <th>Family</th>
                             <th>New England Distribution</th>
-                            <th>North American Native</th>
+                            <th class="native">North American Native</th>
                             <th>Wetland Code</th>
                             <th class="group">Group</th>
                             <th class="subgroup">Subgroup</th>
