Combined JS file now used when PORT env var is set
When the PORT environment variable is set, indicating that we are
running on Heroku, the main template now selects the combined JS file
that JR's build process produces.  Developers can try out this "in
production" mode quite simply, by running their development server like
this: PORT=8000 bin/django-gobotany runserver

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -46,9 +46,7 @@
 
         {% include "simplekey/_script_constants.html" %}
 
-        {% with production='' %}
-
-        {% if not production %}
+        {% if not in_production %}
 
         <!-- DEVELOPMENT FILES -->
         <script src="/static/scripts/dojo_config.js"></script>
@@ -72,18 +70,17 @@
             }
             require.on("error", handleError);
 
-            {% if production %}
+            {% if in_production %}
             require(["/static/build/deploy/gobotany.application.js.uncompressed.js"], function(app) {
             {% endif %}
 
             {% block js_require %}{% endblock %}
 
-            {% if production %}
+            {% if in_production %}
             });
             {% endif %}
         </script>
 
-        {% endwith %}
 		{# Google analytics tracking code #}
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
