Future-proof: Ember ENV.VIEW_PRESERVES_CONTEXT
The behavior of Ember views is changing as they move towards 1.0 and, to
be ready (and to eliminate a JavaScript warning message that the new
Ember version was bringing up), I have gone ahead and set an Ember flag
and rewritten our one Ember view to match the new behavior.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -180,10 +180,10 @@
 {% block ember_templates %}{% verbatim %}
 <script type="text/x-handlebars" data-template-name="filter-view">
   <a class="option">
-    <span class="name">{{filter.info.friendly_name}}?</span>
-    <span class="value">{{display_value}}</span>
+    <span class="name">{{view.filter.info.friendly_name}}?</span>
+    <span class="value">{{view.display_value}}</span>
   </a>
-  {{#if filter.value}}
+  {{#if view.filter.value}}
   <a class="clear-filter" {{action "clear"}}>Clear</a>
   {{/if}}
 </script>
