--- a/gobotany/simplekey/templates/simplekey/_script_constants.html
+++ b/gobotany/simplekey/templates/simplekey/_script_constants.html
@@ -1,5 +1,13 @@
-        <script>
-            API_URL = '{% url api-base %}';
-            SEARCH_URL = '{% url search %}';
-            SUGGEST_URL = '{% url simplekey-search-suggest %}';
-        </script>
+<script>
+    API_URL = '{% url api-base %}';
+    SEARCH_URL = '{% url search %}';
+    SUGGEST_URL = '{% url simplekey-search-suggest %}';
+
+    /* Get rid of Ember 0.9.8.1 warnings by telling it to go ahead and
+       behave like the future. */
+
+    ENV = {
+//        CP_DEFAULT_CACHEABLE: true,
+        VIEW_PRESERVES_CONTEXT: true
+    };
+</script>
