Species list: Fix title. Remove drop-down for wetland column. (#142)

--- a/gobotany/simplekey/templates/simplekey/species_list.html
+++ b/gobotany/simplekey/templates/simplekey/species_list.html
@@ -1,7 +1,7 @@
 {% extends "simplekey/_new_base.html" %}
 {% load simplekey_extras %}
 
-{% block title %}Plant List{% endblock %}
+{% block title %}Species List{% endblock %}
 
 {% block body_attributes %}id="list" class="claro app list"{% endblock %}
 
@@ -24,7 +24,7 @@
                             <th>Family</th>
                             <th>New England Distribution</th>
                             <th class="native">North American Native</th>
-                            <th filter-type="ddl">Wetland Code</th>
+                            <th>Wetland Code</th>
                             <th class="group">Group</th>
                             <th class="subgroup">Subgroup</th>
                         </tr>
