Species list: fix and improve instructions. (#142)

--- a/gobotany/simplekey/templates/simplekey/species_list.html
+++ b/gobotany/simplekey/templates/simplekey/species_list.html
@@ -15,7 +15,7 @@
     <div class="content">
         <div class="container">
                 <h2>Species List</h2>
-                <p>To filter the list, type or select under a column name.</p>
+                <p>To filter the list, type in the box under any column name.</p>
                 <table id="species">
                     <thead>
                         <tr>
