--- a/gobotany/simplekey/templates/simplekey/_script_constants.html
+++ b/gobotany/simplekey/templates/simplekey/_script_constants.html
@@ -7,7 +7,7 @@
        behave like the future. */
 
     ENV = {
-//        CP_DEFAULT_CACHEABLE: true,
+        CP_DEFAULT_CACHEABLE: true,
         VIEW_PRESERVES_CONTEXT: true
     };
 </script>
