Advanced Map: Link to new species list for groups and subgroups.
The species list page now filters on the hash parameters. Refinements
will be added, but for now at least the links to the lists are in
place. (#142)

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -29,7 +29,7 @@
                         {% endfor %}
                     </div>
                     <p class="list">
-                        <a href="/list/"
+                        <a href="/list/#group={{ group.friendly_title }}{% if group.friendly_title|lower = 'woody plants' %} not non{% endif %}"
                             >Species list</a>
                     </p>
                     {% if group.youtube_id %}
@@ -61,7 +61,7 @@
                         <a class="choose-btn"
                             href="/{{ group.slug }}/{{ subgroup.slug }}/"></a>
                         <p class="list">
-                            <a href="/{{ group.slug }}/{{ subgroup.slug }}/#_view=list"
+                            <a href="/list/#subgroup={{ subgroup.friendly_title }}"
                                 >Species list</a>
                         </p>
                         {% if subgroup.youtube_id %}
