--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -102,8 +102,8 @@
 
                 <div class="donate">
                     <p>Please contribute to our mission to conserve and
-                    promote the region&#8217;s plants by making a
-                    donation to New England Wild Flower Society.
+                    promote the region&#8217;s plants by donating
+                    to New England Wild Flower Society.
                     <a href="http://www.newenglandwild.org/support/">Donate</a>
                     </p>
                 </div>
